Changes from jTDS 0.8.1
=========================

08/09/2004 - Brian Heineman
 o Corrected bug [1005881] Typo in Exception message "Uknown server host name
   abc"
 o Corrected bug [1005644] Small bug in ant build file; (thanks to Mike
   Hutchinson for the fix).

08/07/2004 - David Kilzer
 o Changed AbstractDataSource.getTdsVersion() and setTdsVersion() back to
   getTds() and setTds() to preserve external interface.  Left private data
   member named tdsVersion to provide consistency with private field in
   ConnectionJDBC2 and to make testing easier.

08/07/2004 - Brian Heineman
 o Applied patch [1005207] Modified microsoftPrepare method; (thanks to Mike
   Hutchinson for the patch).

08/06/2004 - David Kilzer
 o De-uglified the Driver.getPropertyInfo() method.  The code reads much
   cleaner now.
 o Revised insert/update/delete-new-property mini-howto in DefaultProperties.
 o Created overloaded DefaultProperties.getServerType() methods to convert
   server type from String to Integer and Integer to String.  Implemented in
   Driver and JtdsDataSource classes.
 o Created JtdsDataSourceUnitTest class.  Cleaned up AbstractDataSource to
   use DefaultProperties defaults, added missing appName and progName
   properties, fixed type of prepareSql from boolean to int, and renamed
   isLastUpdateCount() to getLastUpdateCount().  Fixed parsing of new type
   of prepareSql property in JtdsObjectFactory.getObjectInstance().
 o Updated DefaultPropertiesTestLibrary to contain flags for only testing a
   default setup of SQL Server and/or TDS 7.0.
 o Updated DriverPropertyInfo choices for prepareSql property.
 o Cleaned up DefaultPropertiesTestLibrary so it is easier to extend.
 o Created ConnectionJDBC2UnitTest.
 o Created DefaultProperties.getTdsVersion() method to convert Tds version
   string to an integer.  Created unit tests in DefaultPropertiesUnitTest.
 o Created UnitTestBase.invokeGetInstanceField() method for
   ConnectionJDBC2UnitTest.