@@ -6,7 +6,9 @@ Changes from jTDS 0.8.1
    abc"
  o Corrected bug [1005644] Small bug in ant build file; (thanks to Mike
    Hutchinson for the fix).
-
+ o Applied patch [1005550] Documentation on sp_cursorprepare etc.; (thanks to
+   Mike Hutchinson for the patch).
+ 
 08/07/2004 - David Kilzer
  o Changed AbstractDataSource.getTdsVersion() and setTdsVersion() back to
    getTds() and setTds() to preserve external interface.  Left private data
